--- a/praktikum3/Prak3_0110119043_Evylia Yanuar Laily/index.html
+++ b/praktikum3/Prak3_0110119043_Evylia Yanuar Laily/index.html
@@ -26,16 +26,6 @@
         <a href="#about">CONTACT</a>
     </nav>
     <br>
-    <div id="about">
-        <h2>Contact</h2>
-        <ul>
-            <li><a href="https://api.whatsapp.com/send/?phone=6289517045878&text&app_absent=0" target="_blank">Whatsapp</a></li>
-            <li><a href="https://instagram.com/disly.clo/" target="_blank">Instagram</a></li>
-            <li><a href="https://shopee.co.id/inidisly" target="_blank">Shopee</a></li>
-        </ul>
-    </div>
-
-    <br>
 
     <div id="produk">
         <h2>Product</h2>
@@ -192,7 +182,10 @@
         <h2>Pemesanan</h2>
 
         <label for="">Nama Lengkap</label>
-        <input type="text" name="nama" value=""/>
+        <input type="text" name="nama" placeholder="Masukkan Nama Anda" value=""/>
+        <br><br>
+        <label for="">Email</label>
+        <input type="email" id="email" name="email" placeholder="Masukkan Email Anda"/>
         <br><br>
         <label for="">Jenis Kelamin</label>
         <br>
@@ -219,7 +212,7 @@
         <label for="vehicle3"> Baju Warna Hijau Tosca</label><br>
         <br><br>
         <label for="">Jumlah Barang</label>
-        <input type="text" name="angka" id="">
+        <input type="text" name="angka" placeholder="Masukkan Total Jumlah Barang" id="">
         <br><br>
         <label for="">Alamat Pengirim</label>
         <br><br>
@@ -236,7 +229,15 @@
         <input type="submit" name="data" value="Pesan" id="">
     </div>
 
-    
+    <br><br>
+    <div id="about">
+        <h2>Contact</h2>
+        <ul>
+            <li><a href="https://api.whatsapp.com/send/?phone=6289517045878&text&app_absent=0" target="_blank">Whatsapp</a></li>
+            <li><a href="https://instagram.com/disly.clo/" target="_blank">Instagram</a></li>
+            <li><a href="https://shopee.co.id/inidisly" target="_blank">Shopee</a></li>
+        </ul>
+    </div>
 
 </body>
 </html>
